// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write compiled i18n loaders for fse fileSystem writes a translation file for a non-terra-supported locale 1`] = `
"'use strict';

var loadCyIntl = function loadCyIntl() {
require.ensure([], function (require) {
  return require('intl/locale-data/jsonp/cy.js');
}, 'cy-intl-local');

var intlLoaders = {
  'cy': loadCyIntl
};

module.exports = intlLoaders;"
`;

exports[`write compiled i18n loaders for fse fileSystem writes a translation file for a non-terra-supported locale 2`] = `
"'use strict';

var loadCyTranslations = function loadCyTranslations(callback, scope) {
  require.ensure([], function (require) {
    // eslint-disable-next-line
    var i18n = require('./cy.js');
    callback.call(scope, i18n);
  }, 'cy-translations');
};

var translationsLoaders = {
  'cy': loadCyTranslations
};

module.exports = translationsLoaders;"
`;

exports[`write compiled i18n loaders for fse fileSystem writes compiled loader files 1`] = `
"'use strict';

var loadEnIntl = function loadEnIntl() {
require.ensure([], function (require) {
  return require('intl/locale-data/jsonp/en.js');
}, 'en-intl-local');

'use strict';

var loadEsIntl = function loadEsIntl() {
require.ensure([], function (require) {
  return require('intl/locale-data/jsonp/es.js');
}, 'es-intl-local');

var intlLoaders = {
  'en': loadEnIntl,
  'es': loadEsIntl
};

module.exports = intlLoaders;"
`;

exports[`write compiled i18n loaders for fse fileSystem writes compiled loader files 2`] = `
"'use strict';

var loadEnTranslations = function loadEnTranslations(callback, scope) {
  require.ensure([], function (require) {
    // eslint-disable-next-line
    var i18n = require('./en.js');
    callback.call(scope, i18n);
  }, 'en-translations');
};

'use strict';

var loadEsTranslations = function loadEsTranslations(callback, scope) {
  require.ensure([], function (require) {
    // eslint-disable-next-line
    var i18n = require('./es.js');
    callback.call(scope, i18n);
  }, 'es-translations');
};

var translationsLoaders = {
  'en': loadEnTranslations,
  'es': loadEsTranslations
};

module.exports = translationsLoaders;"
`;

exports[`write compiled i18n loaders for memoryFS fileSystem writes a translation file for a non-terra-supported locale 1`] = `
"'use strict';

var loadCyIntl = function loadCyIntl() {
require.ensure([], function (require) {
  return require('intl/locale-data/jsonp/cy.js');
}, 'cy-intl-local');

var intlLoaders = {
  'cy': loadCyIntl
};

module.exports = intlLoaders;"
`;

exports[`write compiled i18n loaders for memoryFS fileSystem writes a translation file for a non-terra-supported locale 2`] = `
"'use strict';

var loadCyTranslations = function loadCyTranslations(callback, scope) {
  require.ensure([], function (require) {
    // eslint-disable-next-line
    var i18n = require('./cy.js');
    callback.call(scope, i18n);
  }, 'cy-translations');
};

var translationsLoaders = {
  'cy': loadCyTranslations
};

module.exports = translationsLoaders;"
`;

exports[`write compiled i18n loaders for memoryFS fileSystem writes compiled loader files 1`] = `
"'use strict';

var loadEnIntl = function loadEnIntl() {
require.ensure([], function (require) {
  return require('intl/locale-data/jsonp/en.js');
}, 'en-intl-local');

'use strict';

var loadEsIntl = function loadEsIntl() {
require.ensure([], function (require) {
  return require('intl/locale-data/jsonp/es.js');
}, 'es-intl-local');

var intlLoaders = {
  'en': loadEnIntl,
  'es': loadEsIntl
};

module.exports = intlLoaders;"
`;

exports[`write compiled i18n loaders for memoryFS fileSystem writes compiled loader files 2`] = `
"'use strict';

var loadEnTranslations = function loadEnTranslations(callback, scope) {
  require.ensure([], function (require) {
    // eslint-disable-next-line
    var i18n = require('./en.js');
    callback.call(scope, i18n);
  }, 'en-translations');
};

'use strict';

var loadEsTranslations = function loadEsTranslations(callback, scope) {
  require.ensure([], function (require) {
    // eslint-disable-next-line
    var i18n = require('./es.js');
    callback.call(scope, i18n);
  }, 'es-translations');
};

var translationsLoaders = {
  'en': loadEnTranslations,
  'es': loadEsTranslations
};

module.exports = translationsLoaders;"
`;
